FPSGrounds6_NAV Mesh & Third Person C++

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,7 +19,6 @@ GlobalDefaultServerGameMode=None
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
 
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
@@ -29,6 +28,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/S05_FpsGrounds")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/S05_FpsGrounds")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/S05_FpsGrounds")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/S05_FpsGrounds")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="S05_FpsGroundsProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="S05_FpsGroundsHUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="S05_FpsGroundsGameMode")
