--- a/S05_FpsGrounds.uproject
+++ b/S05_FpsGrounds.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "S05_FpsGrounds",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"AIModule"
+			]
 		}
 	]
 }
