--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,8 +30,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/S05_FpsGrounds")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/S05_FpsGrounds")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/S05_FpsGrounds")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="S05_FpsGroundsProjectile")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="BallProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="S05_FpsGroundsHUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="S05_FpsGroundsGameMode")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="S05_FpsGroundsCharacter")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="FirstPersonCharacter")
 
