Infinite Loop Map Route | Terrain Mode | Health Bar | MedKit Pick up

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,14 +6,16 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Static/Levels/FirstPersonExampleMap.FirstPersonExampleMap
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Static/Levels/FirstPersonExampleMap.FirstPersonExampleMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/S05_FpsGrounds.S05_FpsGroundsGameMode
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Dynamic/InfiniteTerrainGameMode.InfiniteTerrainGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
