--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -37,3 +37,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="S05_FpsGroundsGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="FirstPersonCharacter")
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
