AI_NPC | Bugg fix

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,54 @@ Saved
 *.suo
 *.xcodeproj
 *.xcworkspace
+Content/MS_CrumbledWa/Megascans_CrumbledWa_Source.zip
+Content/MS_CrumbledWa/3D_Asset/01_Structure_Cement_sftdP/01_Structure_Cement_sftdP_8K_inst.uasset
+Content/MS_CrumbledWa/3D_Asset/01_Structure_Cement_sftdP/Aset_structure_cement_M_sftdP_8K_Albedo.uasset
+Content/MS_CrumbledWa/3D_Asset/01_Structure_Cement_sftdP/Aset_structure_cement_M_sftdP_8K_Displacement.uasset
+Content/MS_CrumbledWa/3D_Asset/01_Structure_Cement_sftdP/Aset_structure_cement_M_sftdP_8K_Normal_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/01_Structure_Cement_sftdP/Aset_structure_cement_M_sftdP_8K_Roughness.uasset
+Content/MS_CrumbledWa/3D_Asset/01_Structure_Cement_sftdP/Aset_structure_cement_M_sftdP_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/02_Broken_Wall_slumj/02_Broken_Wall_slumj_8K_inst.uasset
+Content/MS_CrumbledWa/3D_Asset/02_Broken_Wall_slumj/slumj_8K_Albedo.uasset
+Content/MS_CrumbledWa/3D_Asset/02_Broken_Wall_slumj/slumj_8K_Displacement.uasset
+Content/MS_CrumbledWa/3D_Asset/02_Broken_Wall_slumj/slumj_8K_Normal_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/02_Broken_Wall_slumj/slumj_8K_Roughness.uasset
+Content/MS_CrumbledWa/3D_Asset/02_Broken_Wall_slumj/slumj_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/03_Broken_Wall_slund/03_Broken_Wall_slund_8K_inst.uasset
+Content/MS_CrumbledWa/3D_Asset/03_Broken_Wall_slund/slund_8K_Albedo.uasset
+Content/MS_CrumbledWa/3D_Asset/03_Broken_Wall_slund/slund_8K_Displacement.uasset
+Content/MS_CrumbledWa/3D_Asset/03_Broken_Wall_slund/slund_8K_Normal_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/03_Broken_Wall_slund/slund_8K_Roughness.uasset
+Content/MS_CrumbledWa/3D_Asset/03_Broken_Wall_slund/slund_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/04_Broken_Wall_slunl/04_Broken_Wall_slunl_8K_inst.uasset
+Content/MS_CrumbledWa/3D_Asset/04_Broken_Wall_slunl/slunl_8K_Albedo.uasset
+Content/MS_CrumbledWa/3D_Asset/04_Broken_Wall_slunl/slunl_8K_Displacement.uasset
+Content/MS_CrumbledWa/3D_Asset/04_Broken_Wall_slunl/slunl_8K_Normal_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/04_Broken_Wall_slunl/slunl_8K_Roughness.uasset
+Content/MS_CrumbledWa/3D_Asset/04_Broken_Wall_slunl/slunl_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/05_Broken_Wall_slvfI/05_Broken_Wall_slvfI_8K_inst.uasset
+Content/MS_CrumbledWa/3D_Asset/05_Broken_Wall_slvfI/slvfI_8K_Albedo.uasset
+Content/MS_CrumbledWa/3D_Asset/05_Broken_Wall_slvfI/slvfI_8K_Displacement.uasset
+Content/MS_CrumbledWa/3D_Asset/05_Broken_Wall_slvfI/slvfI_8K_Normal_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/05_Broken_Wall_slvfI/slvfI_8K_Roughness.uasset
+Content/MS_CrumbledWa/3D_Asset/05_Broken_Wall_slvfI/slvfI_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/06_Broken_Wall_taqgH/06_Broken_Wall_taqgH_8K_inst.uasset
+Content/MS_CrumbledWa/3D_Asset/06_Broken_Wall_taqgH/taqgH_8K_Albedo.uasset
+Content/MS_CrumbledWa/3D_Asset/06_Broken_Wall_taqgH/taqgH_8K_Displacement.uasset
+Content/MS_CrumbledWa/3D_Asset/06_Broken_Wall_taqgH/taqgH_8K_Normal_LOD0.uasset
+Content/MS_CrumbledWa/3D_Asset/06_Broken_Wall_taqgH/taqgH_8K_Roughness.uasset
+Content/MS_CrumbledWa/3D_Asset/06_Broken_Wall_taqgH/taqgH_LOD0.uasset
+Content/MS_CrumbledWa/Maps/Overview.umap
+Content/MS_CrumbledWa/Maps/Overview_BuiltData.uasset
+Content/MS_CrumbledWa/Master_Materials/Atlas_MasterMaterial.uasset
+Content/MS_CrumbledWa/Master_Materials/BrushDecal_MasterMaterial.uasset
+Content/MS_CrumbledWa/Master_Materials/ChannelPackingSample.uasset
+Content/MS_CrumbledWa/Master_Materials/Decal_MasterMaterial.uasset
+Content/MS_CrumbledWa/Master_Materials/Displacement_MasterMaterial.uasset
+Content/MS_CrumbledWa/Master_Materials/Foliage_MasterMaterial.uasset
+Content/MS_CrumbledWa/Master_Materials/Imperfection_MasterMaterial.uasset
+Content/MS_CrumbledWa/Master_Materials/noise_mask.uasset
+Content/MS_CrumbledWa/Master_Materials/noise_Mat.uasset
+Content/MS_CrumbledWa/Master_Materials/noise_normal.uasset
+Content/MS_CrumbledWa/Master_Materials/Standard_MasterMaterial.uasset
+Content/MS_CrumbledWa/Master_Materials/SurfaceBlend_MasterMaterial.uasset
